# python-workers-mcp

./: .gitignore  Makefile  package-lock.json  pyproject.toml  vendor.txt  wrangler.jsonc
src/: worker.py
