[project]
name = "python-workers-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.3",
    "requests>=2.32.3",
    "openmarkets>=0.1.0.dev53",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.7",
]


[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",  # pep8-naming
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

